--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_about">About</string>
+    <string name="tagline">
+The club envisions a society with better knowledge, awareness, and access to technologies around the globe. We believe in achieving solutions of real world problems through using technologies which are either developing, new or old in an innovative way. </string>
 </resources>
