--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 The club envisions a society with better knowledge, awareness, and access to technologies around the globe. We believe in achieving solutions of real world problems through using technologies which are either developing, new or old in an innovative way. </string>
     <string name="blog_icon">blog icon</string>
     <string name="our_blogs">Our Blogs</string>
+    <string name="msg_token_fmt">"token "</string>
 </resources>
